stderr
HikerTest.java:14: error: illegal start of expression
        String[] hand = ["H2", "C3", "D4", "S5", "H6"];
                        ^
1 error
